--- a/vector_implementation.vcxproj
+++ b/vector_implementation.vcxproj
@@ -127,6 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Map.h" />
     <ClInclude Include="uniqueptr.h" />
     <ClInclude Include="vector.h" />
   </ItemGroup>
