--- a/vector_implementation.vcxproj.filters
+++ b/vector_implementation.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClInclude Include="uniqueptr.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Map.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
